# manto3D

./: .gitignore  README.md  grapher.py
manto/: CMakeLists.txt  main.cpp
manto/base/: Manto.cpp  Manto.h  Tester.cpp  Tester.h  Vector.cpp  Vector.h
manto/base/figures/: Figure.cpp  Figure.h  Point.cpp  Point.h
manto/base/figures/figures2/: Figure2.cpp  Figure2.h  Point2.cpp  Point2.h  Polygon2.cpp  Polygon2.h  Segment2.cpp  Segment2.h  Triangle2.cpp  Triangle2.h
manto/base/figures/figures3/: Figure3.cpp  Figure3.h  Point3.cpp  Point3.h  Polygon3.cpp  Polygon3.h  Segment3.cpp  Segment3.h  Triangle3.cpp  Triangle3.h
manto/base/space/: Line.cpp  Line.h  Plane.cpp  Plane.h  Vector.cpp  Vector.h
manto/base/spaces/spaces2/: Line2.cpp  Line2.h  Vector2.cpp  Vector2.h
manto/base/spaces/spaces3/: Line3.cpp  Line3.h  Plane.cpp  Plane.h  Vector3.cpp  Vector3.h
manto/base/util/: Glue.cpp  Glue.h  IndexIterator.cpp  IndexIterator.h  Intersector.cpp  Intersector.h  Range.cpp  Range.h  RangeContainer.cpp  RangeContainer.h  Util.cpp  Util.h
manto/base/util/clipper/: clipper.hpp  clipper_console_demo.cpp
